--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,49 @@
-# Ignore Gradle project-specific cache directory
-.gradle
+# Gradle - Build system files
+.gradle/
+**/build/
+.qodo/
 
-# Ignore Gradle build output directory
-build
-.qodo
+# IDE - IntelliJ IDEA
+**/.idea/
+**/*.iml
+**/*.iws
+**/*.ipr
+**/out/
+**/.idea_modules/
+
+# IDE - Eclipse
+**/.classpath
+**/.project
+**/.settings/
+**/bin/
+
+# IDE - VS Code
+**/.vscode/
+**/*.code-workspace
+
+# Java
+**/*.class
+**/*.jar
+!gradle/wrapper/gradle-wrapper.jar
+**/*.war
+**/*.ear
+**/hs_err_pid*
+
+# Logs
+**/*.log
+**/logs/
+
+# OS specific
+**/.DS_Store
+**/Thumbs.db
+
+# Python/CI related
+**/__pycache__/
+**/*.py[cod]
+**/*$py.class
+**/.pytest_cache/
+**/.coverage
+**/.env
+**/.venv/
+**/venv/
+**/ENV/
