--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,8 @@
+# Gradle performance settings
 org.gradle.configuration-cache=true
 org.gradle.parallel=true
 org.gradle.caching=true
+
+# Project settings
+javaVersion=23
 
