--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,7 +12,10 @@ ext {
             slf4j: '2.0.17',
             junit: '5.12.1',
             lombok: '1.18.38',
-            geldata: '0.4.0'
+            geldata: '0.4.0',
+            jsr305: '4.9.3',
+            guava: '33.4.7-jre',
+            truth: '1.4.4'
     ]
 
     // Define all dependencies here
@@ -33,8 +36,13 @@ ext {
             slf4jSimple: "org.slf4j:slf4j-simple:${versions.slf4j}",
             geldata: "com.geldata:driver:${versions.geldata}",
             junitJupiter: "org.junit.jupiter:junit-jupiter:${versions.junit}",
+            guava: "com.google.guava:guava:${versions.guava}",
+            truth: "com.google.truth:truth:${versions.truth}",
 
             // Tools
-            lombok: "org.projectlombok:lombok:${versions.lombok}"
+            lombok: "org.projectlombok:lombok:${versions.lombok}",
+
+            // Annotations
+            jsr305: "com.github.spotbugs:spotbugs-annotations:${versions.jsr305}"
     ]
 }
