--- a/sourcesets.gradle
+++ b/sourcesets.gradle
@@ -6,12 +6,18 @@
 sourceSets {
     main {
         java {
-            srcDirs = ['src/main/java', 'src/main/gen']
+            srcDirs = ['src/main/java']
+        }
+        resources {
+            srcDirs = ['src/main/resources']
         }
     }
     test {
         java {
-            srcDirs = ['src/test/java', 'src/main/gen']
+            srcDirs = ['src/test/java']
+        }
+        resources {
+            srcDirs = ['src/test/resources']
         }
     }
 }
