Updated project structure. Wrote information on compiler phases and added additional design docs.

--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,19 @@
-/*
- * Main build file
- *
- * Plugin-specific configurations are in separate files:
- * - java.gradle: Java configuration
- * - lombok.gradle: Lombok configuration
- * - spotless.gradle: Spotless configuration
- *
- * Subproject-specific configurations are in each subproject's build.gradle file
- * For example, see utilities/build.gradle
- */
-
 plugins {
     id 'java-library'
     id 'application' // Added for running the application
-    id 'com.github.ben-manes.versions' version '0.52.0' // For checking dependency updates
-    id 'io.freefair.lombok' version '8.13.1' // For Lombok support
-    id 'com.diffplug.spotless' version '7.0.3' // For code formatting
+    alias(libs.plugins.versions) // For checking dependency updates
+    // alias(libs.plugins.lombok) // For Lombok support
+    alias(libs.plugins.spotless) // For code formatting
 }
 
-apply from: 'dependencies.gradle'
-apply from: 'plugin.java.gradle'
-apply from: 'plugin.lombok.gradle'
-apply from: 'plugin.spotless.gradle'
-apply from: 'plugin.antlr.gradle'
-apply from: 'sourcesets.gradle'
+apply from: 'gradle/conventions/java.gradle'
+// apply from: 'gradle/conventions/lombok.gradle'
+apply from: 'gradle/conventions/spotless.gradle'
+apply from: 'gradle/conventions/antlr.gradle'
+apply from: 'gradle/conventions/sources.gradle'
+apply from: 'gradle/conventions/version.gradle'
+
+version = projectVersion
 
 allprojects {
     repositories {
@@ -44,21 +34,21 @@ run {
     jvmArgs = ['--add-modules', 'jdk.incubator.vector', '--enable-preview', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 }
 
-// Main project dependencies
 dependencies {
-    implementation libs.vertxCore
-    implementation libs.vertxWeb
-    implementation libs.vertxCodegen
+    implementation libs.vertx.core
+    implementation libs.vertx.web
+    implementation libs.vertx.codegen
     implementation libs.dagger
     implementation libs.netty
-    implementation libs.slf4jApi
-    implementation libs.slf4jSimple
+    implementation libs.slf4j.api
+    implementation libs.slf4j.simple
     implementation libs.geldata
     implementation libs.jsr305
     implementation libs.guava
 
-    testImplementation libs.vertxUnit
+    testImplementation libs.vertx.unit
     testImplementation libs.truth
+    testImplementation libs.junit.jupiter
 
     // Module dependencies
     implementation project(':utilities')
