--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
+projectGroup=org.nestharus
+
 # Gradle performance settings
 org.gradle.configuration-cache=true
 org.gradle.parallel=true
 org.gradle.caching=true
 
 # Project settings
-javaVersion=23
-
+javaVersion=24
