--- a/router-compiler/build.gradle
+++ b/router-compiler/build.gradle
@@ -1,21 +1,19 @@
-import org.gradle.plugins.ide.eclipse.model.SourceFolder
-
 apply plugin: 'java-library'
-apply plugin: 'io.freefair.lombok'
+// apply plugin: 'io.freefair.lombok'
 apply plugin: 'com.diffplug.spotless'
 apply plugin: 'antlr'
 
-apply from: '../sourcesets.gradle'
+apply from: '../gradle/conventions/sources.gradle'
 
 dependencies {
-    implementation libs.slf4jApi
-    implementation libs.slf4jSimple
+    implementation libs.slf4j.api
+    implementation libs.slf4j.simple
     implementation libs.jsr305
     implementation libs.guava
-    implementation libs.antlrRuntime
+    implementation libs.antlr.runtime
 
-    antlr libs.antlrTool
+    antlr libs.antlr.tool
 
-    testImplementation libs.junitJupiter
+    testImplementation libs.junit.jupiter
     testImplementation libs.truth
 }
