--- a/gradle/conventions/java.gradle
+++ b/gradle/conventions/java.gradle
@@ -1,8 +1,3 @@
-/*
- * Java configuration
- */
-
-// Configure Java for all projects that have the java-library plugin applied
 allprojects {
     plugins.withId('java-library') {
         java {
@@ -11,24 +6,24 @@ allprojects {
             }
         }
 
-        testing {
-            suites {
-                test {
-                    useJUnitJupiter()
-                }
-            }
-        }
-
         // JVM arguments for vector API
-        tasks.withType(JavaCompile) {
+        tasks.withType(JavaCompile).configureEach {
             options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
         }
 
-        tasks.withType(Test) {
+        tasks.withType(Test).configureEach {
+            useJUnitPlatform()
+
+            testLogging {
+                showStandardStreams = true
+                exceptionFormat = 'full'
+                events "passed", "skipped", "failed"
+            }
+
             jvmArgs += ['--add-modules', 'jdk.incubator.vector', '--enable-preview', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
         }
 
-        tasks.withType(JavaExec) {
+        tasks.withType(JavaExec).configureEach {
             jvmArgs += ['--add-modules', 'jdk.incubator.vector', '--enable-preview', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
         }
     }
