--- a/gradle/conventions/spotless.gradle
+++ b/gradle/conventions/spotless.gradle
@@ -1,8 +1,3 @@
-/*
- * Spotless plugin configuration
- */
-
-// Configure Spotless for all projects that have the spotless plugin applied
 allprojects {
     plugins.withId('com.diffplug.spotless') {
         spotless {
@@ -15,8 +10,10 @@ allprojects {
         }
         
         // Make compileJava depend on spotlessApply so formatting happens before compilation
-        tasks.withType(JavaCompile) { task ->
-            task.dependsOn tasks.named('spotlessApply')
+        tasks.withType(JavaCompile).tap {
+            configureEach { task ->
+                task.dependsOn tasks.named('spotlessApply')
+            }
         }
     }
 }
