--- a/gradle/conventions/antlr.gradle
+++ b/gradle/conventions/antlr.gradle
@@ -12,8 +12,7 @@ allprojects {
             }
         }
 
-        def outputPath = file(projectDir.toString() + '/build/generated/sources/antlr/main')
-        def javaPath = file(projectDir.toString() + '/build/generated/sources/antlr/main/java/org/nestharus/parser')
+        def outputPath = file(projectDir.toString() + '/build/generated/sources/antlr/main/java/org/nestharus/parser')
         def grammarPath = file(projectDir.toString() + '/src/main/resources/grammar')
 
         generateGrammarSource {
@@ -28,39 +27,8 @@ allprojects {
                     '-Xexact-output-dir'
             ]
 
-            def paths = [
-                    source: [
-                            routeLexer             : outputPath.absolutePath + '/RouteLexer.java',
-                            routeParser            : outputPath.absolutePath + '/RouteParser.java',
-                            routeParserBaseListener: outputPath.absolutePath + '/RouteParserBaseListener.java',
-                            routeParserBaseVisitor : outputPath.absolutePath + '/RouteParserBaseVisitor.java',
-                            routeParserListener    : outputPath.absolutePath + '/RouteParserListener.java',
-                            routeParserVisitor     : outputPath.absolutePath + '/RouteParserVisitor.java'
-                    ],
-                    target: [
-                            routeLexer             : javaPath.absolutePath + '/RouteLexer.java',
-                            routeParser            : javaPath.absolutePath + '/RouteParser.java',
-                            routeParserBaseListener: javaPath.absolutePath + '/RouteParserBaseListener.java',
-                            routeParserBaseVisitor : javaPath.absolutePath + '/RouteParserBaseVisitor.java',
-                            routeParserListener    : javaPath.absolutePath + '/RouteParserListener.java',
-                            routeParserVisitor     : javaPath.absolutePath + '/RouteParserVisitor.java'
-                    ]
-            ]
-
             doFirst {
-                new File(javaPath.absolutePath).mkdirs()
-            }
-
-            doLast {
-                paths.source.each { name, sourcePath ->
-                    def sourceFile = new File(sourcePath)
-                    def targetFile = new File(paths.target[name])
-                    if (sourceFile.exists()) {
-                        sourceFile.renameTo(targetFile)
-                    } else {
-                        logger.warn("Source file not found: ${sourcePath}")
-                    }
-                }
+                new File(outputPath.absolutePath).mkdirs()
             }
         }
 
