--- a/router-compiler/build.gradle
+++ b/router-compiler/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     implementation libs.jsr305
     implementation libs.guava
     implementation libs.antlr.runtime
+    implementation libs.apache.commons.lang3
 
     antlr libs.antlr.tool
 
