Remove toString overrides. Fix line breaks for the last time applying UNIX line breaks.

--- a/gradle/conventions/spotless.gradle
+++ b/gradle/conventions/spotless.gradle
@@ -1,6 +1,8 @@
 allprojects {
     plugins.withId('com.diffplug.spotless') {
         spotless {
+            lineEndings 'UNIX'
+
             java {
                 googleJavaFormat()
                 removeUnusedImports()
@@ -8,8 +10,7 @@ allprojects {
                 target 'src/*/java/**/*.java'
             }
         }
-        
-        // Make compileJava depend on spotlessApply so formatting happens before compilation
+
         tasks.withType(JavaCompile).tap {
             configureEach { task ->
                 task.dependsOn tasks.named('spotlessApply')
